Make panel actions a sibling of body rather than a child, but allow styling of both

--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -120,6 +120,15 @@
     }
 }
 
+// When panel actions is a sibling of body, position it appropriately
+.panel__body + .panel__actions {
+    padding: 0 12px 10px;
+
+    &.panel__actions--inline {
+        padding-left: 0;
+    }
+}
+
 .panel__actions {
     margin-top: 10px;
     min-height: 33px;
