Add common list example to lexicon patterns section

--- a/views/lexicon/patterns/common-list/table.html.twig
+++ b/views/lexicon/patterns/common-list/table.html.twig
@@ -1,5 +1,88 @@
+{% extends '@pulsar/pulsar/components/tab.html.twig' %}
+
+{%- block actions_left -%}
+    {{
+        html.actions_menu({
+            'class': 'bulk-actions',
+            'items': [
+                [
+                    {
+                        'label': 'Create thing',
+                        'href': '#creatething',
+                        'icon': 'plus'
+                    },
+                    {
+                        'label': 'New filter',
+                        'href': '#newfilter',
+                        'icon': 'filter',
+                        'data-ui': 'show-filter-bar'
+                    }
+                ],
+                [
+                    {
+                        'label': 'Make a copy',
+                        'href': '#makecopy',
+                        'icon': 'copy',
+                        'data-bulk-action': true
+                    },
+                    {
+                        'label': 'Change owner',
+                        'href': '#Changeowner',
+                        'icon': 'user',
+                        'data-bulk-action': true
+                    }
+                ],
+                [
+                    {
+                        'label': 'Make live',
+                        'href': '#makelive',
+                        'icon': 'check-circle',
+                        'data-bulk-action': true
+                    },
+                    {
+                        'label': 'Take offline',
+                        'href': '#takeoffline',
+                        'icon': 'times-rectangle',
+                        'data-bulk-action': true
+                    },
+                    {
+                        'label': 'Make visible',
+                        'href': '#makevisible',
+                        'icon': 'eye-open',
+                        'data-bulk-action': true
+                    },
+                    {
+                        'label': 'Make invisible',
+                        'href': '#makeinvisible',
+                        'icon': 'eye-slash',
+                        'data-bulk-action': true
+                    }
+                ],
+                [
+                    {
+                        'label': 'Delete',
+                        'href': '#delete',
+                        'icon': 'times',
+                        'class': 'link--danger',
+                        'data-bulk-action': true
+                    }
+                ]
+            ]
+        })
+    }}
+{%- endblock -%}
+
+{%- block actions_right -%}
+    {{
+        html.button({
+            'label': 'Create Thing',
+            'class': 'btn--primary'
+        })
+    }}
+{%- endblock -%}
+
 {% 
-    set datatableData = {
+    set table_data = {
         'columns': [
             { 'title': 'Title' },
             { 'title': 'Owner' },
@@ -205,3 +288,13 @@
         ]
     }
 %}
+
+{% block tab_content %}
+    {{ 
+        html.datatable({
+            'class': 'table--full table--horizontal',
+            'data-order': '[[ 3, "desc" ]]',
+            'data': table_data|default
+        }) 
+    }}
+{% endblock tab_content %}
