Mae sure small media version works on images as well as icons

--- a/views/lexicon/tabs/media.html.twig
+++ b/views/lexicon/tabs/media.html.twig
@@ -36,8 +36,8 @@
     {{
         html.media({
             'class': 'media--small',
-            'icon': 'safari',
-            'title': 'Safari'
+            'image': '/images/pulsar-brand-medium.png',
+            'title': 'Pulsar'
         })
     }}
 
