--- a/stylesheets/objects/_object.media.scss
+++ b/stylesheets/objects/_object.media.scss
@@ -11,18 +11,22 @@ a.media {
 
 .media__image {
     float: left;
-    font-size: 50px; // for icons
     margin-right: 10px;
     text-align: center;
     width: 50px;
-
+    
     &[class^=icon] {
+        font-size: 50px; // for icons
         width: 50px;
     }
 }
 
 .media--small .media__image {
-    font-size: 24px;
+    width: 24px;
+
+    &[class^=icon] {
+        font-size: 24px;
+    }
 }
 
 // only paragraphs in the middle of the body have a bottom margin
