Remove superfluous code comment

--- a/stylesheets/objects/_object.media.scss
+++ b/stylesheets/objects/_object.media.scss
@@ -16,7 +16,7 @@ a.media {
     width: 50px;
 
     &[class^=icon] {
-        font-size: 50px; // for icons
+        font-size: 50px;
         width: 50px;
     }
 }
