Start implementing sticky sidebar as a Pulsar component
Tests still to write

--- a/views/lexicon/patterns/settings-panel/index.html.twig
+++ b/views/lexicon/patterns/settings-panel/index.html.twig
@@ -3,7 +3,7 @@
 {% set heading = 'Ref 5431 - Blue Badge Application Form' %}
 
 {% set tab_one %}
-    {% include '/lexicon/patterns/settings/tab.html.twig' %}
+    {% include '/lexicon/patterns/settings-panel/tab.html.twig' %}
 {% endset %}
 
 {%
@@ -13,6 +13,11 @@
             "label" : "Form responses",
             "src"   : tab_one,
             "active": true
+        },
+        {
+            "id"    : "log",
+            "label" : "Log",
+            "src"   : tab_one,
         }
     ]
 %}
