Remove redundant roe=“status” from loading spinners

--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1032,8 +1032,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
             attributes(options
                 |exclude('label')
                 |defaults({
-                    'class': 'loading',
-                    'role': 'status'
+                    'class': 'loading'
                 })
             )
         }}>
