--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1225,7 +1225,7 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
             {{ options.title|raw }}
         </{{ options.heading_level|default('h2') }}>
         {% endif %}
-        <div class="panel__body">
+        <div class="panel__body"{% if 'panel--scroll' in options.class|default %} tabindex="0"{% endif %}>
             {{- options.body|raw -}}
         </div>
         {% if options.actions is defined %}
