Force text colour on disabled fields since Normalizer stopped doing this
Spotted in CMS since Normalizer was moved from Bower to NPM and update from 5.x to 8.x

Closes #1098

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -246,6 +246,7 @@ fieldset {
     &[readonly],
     fieldset[disabled] & {
         cursor: not-allowed;
+        color: color(text); // Required for cross-browser consistency
         background-color: $input-bg-disabled;
     }
 
