--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -18,9 +18,28 @@
 
 // Set margin and position of loading spinner when directly adjacent to the search button
 .main-search .loading {
+    height: 15px;
     position: absolute;
-    right: -30px;
+    right: -19px; // 15px width + 4px margin
     top: 7px;
+    width: 15px;
+
+    @include respond-min($screen-tablet) {
+        height: 20px;
+        right: -30px;
+        width: 20px;
+    }
+}
+
+// Set size of loading spinner at viewpoints
+.main-search .loading i {
+    height: 15px;
+    width: 14px; // balance out the circle spinner
+
+    @include respond-min($screen-tablet) {
+        height: 20px;
+        width: 20px;
+    }
 }
 
 input.main-search__field {
