Give panels a face lift
Reduce panel title size
Add a separator bar between title and content
Increase panel default padding

--- a/views/lexicon/tabs/panels.html.twig
+++ b/views/lexicon/tabs/panels.html.twig
@@ -171,6 +171,14 @@
         })
     }}
 
+    {{
+        html.panel({
+            'title': 'A list of items being shown',
+            'icon': 'warning-sign',
+            'body': '<ul><li>Item 1</li><li>Item 2</li><li>A long item 3</li><li>Another item</li></ul>',
+        })
+    }}
+
     <section class="panel panel--scroll with-timeline u-margin-top-none" aria-labelledby="guid-scroll">
         <h2 class="panel__title" id="guid-scroll">Content Pending Approval</h2>
 
