Added actions column header text and option

--- a/views/lexicon/forms/repeater.html.twig
+++ b/views/lexicon/forms/repeater.html.twig
@@ -17,6 +17,7 @@
             'max-entries': 3,
             'add-new-group-text': 'Add',
             'add-another-group-text': 'Add another',
+            'actions-column-text': 'Actions',
             'values': [
                 [{ name: 'text', value: 'Mike' }, { name: 'select2multi', value: ['food_gravy'] }],
                 [{ name: 'text', value: 'James' }, { name: 'select2multi', value: ['food_gravy', 'food_pizza'] }],
