Fix toolbar responsiveness in IE11

--- a/stylesheets/_component.breadcrumb.scss
+++ b/stylesheets/_component.breadcrumb.scss
@@ -1,4 +1,5 @@
 .breadcrumb {
+    clear: both;
     color: color(gray, dark); // must be AA 4.5:1
     margin: 0 0 ($line-height-base / 2);
     width: 100%;
