--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -179,8 +179,8 @@
     border-radius: 4px;
     color: $nav-color-dark;
     display: inline-block;
+    height: 34px;
     line-height: normal;
-    // margin-top: 5px;
     padding: 8px 14px 6px;
     text-decoration: none;
 
