--- a/stylesheets/_component.dropdowns.scss
+++ b/stylesheets/_component.dropdowns.scss
@@ -33,7 +33,7 @@
   z-index: $zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
   float: left;
-  font-size: $dropdown-font-size;
+  font-size: $font-size-base;
   min-width: 160px;
   padding: 5px 0;
   margin: 0; // override default ul
@@ -157,7 +157,7 @@
 .dropdown-header {
   display: block;
   padding: 3px 20px;
-  font-size: $font-size-small;
+  font-size: $font-size-base;
   line-height: $line-height-base;
   color: color(gray, light);
 }
