--- a/stylesheets/_component.tab-help.scss
+++ b/stylesheets/_component.tab-help.scss
@@ -67,7 +67,6 @@ $nav-color-dark:  darken(color(jadu-blue, dark), 5%) !default;
     color: color(gray, dark);
     display: inline-block;
     float: right;
-    font-size: .9em;
     line-height: normal;
     padding: 0;
     text-decoration: none;
@@ -94,11 +93,15 @@ $nav-color-dark:  darken(color(jadu-blue, dark), 5%) !default;
 .close-page-help {
     background-color: transparent;
     border: 0;
+    color: color(white);
     font-size: $font-size-xlarge;
     margin-bottom: 10px;
-    padding-right: 0;
     position: absolute;
-    right: 10px;
+    right: 0;
     text-decoration: none;
     top: 10px;
+
+    &:focus {
+        @include pulsar-button-focused;
+    }
 }
