Add button group class to notifications component

--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -1,4 +1,4 @@
-    <div class="dropdown notifications">
+    <div class="btn__group dropdown notifications">
         {{
             html.button({
                 'class': 'notifications-toggle btn--naked is-active',
