If no title is passed to a panel, render as a div and remove the aria attribute

--- a/views/lexicon/tabs/panels.html.twig
+++ b/views/lexicon/tabs/panels.html.twig
@@ -225,4 +225,10 @@
         </div>
     </section>
 
+    {{
+        html.panel({
+            'body': 'A panel with no title will be rendered as a div, not a section.'
+        })
+    }}
+
 {% endblock tab_content %}
