--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1205,17 +1205,22 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as html %}
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
 
+    {% set tag = 'section' %}
     {% set actions_placements = ['inline', 'left', 'center', 'right'] %}
     {% set guid = 'guid-' ~ random() %}
 
-    <section{{
+    {% if options.title is not defined or options.title is empty %}
+        {% set tag = 'div' %}
+    {% endif %}
+
+    <{{ tag }}{{
         attributes(options
             |exclude('actions actions_placement heading_level icon title body')
             |defaults({
                 'class': 'panel'
             })
         )
-    }} aria-labelledby="{{ guid }}">
+    }}{% if tag == 'section' %} aria-labelledby="{{ guid }}"{% endif %}>
         {% if options.icon is defined and options.icon is not empty %}
             {{ html.icon(options.icon|default, { 'class': 'panel__icon' }) }}
         {% endif %}
@@ -1243,7 +1248,7 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
                 {% endfor %}
             </div>
         {% endif %}
-    </section>
+    </{{ tag }}>
 
 {% endspaceless %}
 {% endmacro %}
