Restore ability to switch off datatable row selection with a data attribute
This had broken somewhat when the new centralised options ability was added.

--- a/views/lexicon/tables/datatable.html.twig
+++ b/views/lexicon/tables/datatable.html.twig
@@ -213,6 +213,7 @@
         html.datatable({
             'data-order': '[[ 3, "desc" ]]',
             'data': data,
+            'data-select': 'false',
             'data-length-change': 'true'
         })
     }}
