--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1577,14 +1577,16 @@ Datatable - https://jadu.github.io/pulsar/components/datatable/
                 {% if overflow == 'collapse' %}
                     <td></td>
                 {% endif %}
-                {% for column in options.data.columns %}
-                    {% if loop.first %}
-                        <th class="table-selection" data-orderable="false">
-                            <input type="checkbox" class="form__control checkbox js-select-all" aria-label="Select all rows" data-toggle="tooltips" title="select all rows" data-placement="right" data-container="body" />
-                        </th>
-                    {% endif %}
-                    <th{{ attributes(column.attrs|default) }}>{{ column.title }}</th>
-                {% endfor %}
+                    {% for column in options.data.columns %}
+                        {% if loop.first %}
+                            {% if options['data-select'] is not defined or (options['data-select'] is defined and options['data-select'] != 'false') %}
+                                <th class="table-selection" data-orderable="false">
+                                    <input type="checkbox" class="form__control checkbox js-select-all" aria-label="Select all rows" data-toggle="tooltips" title="select all rows" data-placement="right" data-container="body" />
+                                </th>
+                            {% endif %}
+                        {% endif %}
+                        <th{{ attributes(column.attrs|default) }}>{{ column.title }}</th>
+                    {% endfor %}
             </tr>
         </thead>
         <tbody>
@@ -1595,9 +1597,11 @@ Datatable - https://jadu.github.io/pulsar/components/datatable/
                             {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
                         </td>
                     {% endif %}
-                    <td class="table-selection">
-                        <input type="checkbox" class="form__control checkbox js-select" aria-label="Select row" />
-                    </td>
+                    {% if options['data-select'] is not defined or (options['data-select'] is defined and options['data-select'] != 'false') %}
+                        <td class="table-selection">
+                            <input type="checkbox" class="form__control checkbox js-select" aria-label="Select row" />
+                        </td>
+                    {% endif %}
                     {% for key, val in row %}
                         {% if val is same as(true) %}
                             <td data-order="{{ key }}" class="u-text-align-center">{{ html.status('online', { 'title': key, 'icon': true }) }}</td>
