--- a/views/lexicon/tabs/tooltips.html.twig
+++ b/views/lexicon/tabs/tooltips.html.twig
@@ -2,20 +2,30 @@
 
 {% block tab_content %}
 
-    <p class="centered">
-        <button type="button" class="btn btn-default" data-toggle="tooltips" data-placement="left" title="" data-original-title="Tooltip on left">Tooltip on left</button>
-    </p>
+    {{
+        flash.message({
+            'message': 'Deprecated due to not meeting WCAG 2.1. See Tooltips v2.',
+            'type': 'warning',
+            'dismissable': false
+        })
+    }}
 
-    <p class="centered">
-        <button type="button" class="btn btn-default" data-toggle="tooltips" data-placement="top" title="" data-original-title="Tooltip on top">Tooltip on top</button>
-    </p>
+    <div class="u-margin-top--large">
+        <p class="centered">
+            <button type="button" class="btn btn-default" data-toggle="tooltips" data-placement="left" title="" data-original-title="Tooltip on left">Tooltip on left</button>
+        </p>
 
-    <p class="centered">
-        <button type="button" class="btn btn-default" data-toggle="tooltips" data-placement="bottom" title="" data-original-title="Tooltip on bottom">Tooltip on bottom</button>
-    </p>
+        <p class="centered">
+            <button type="button" class="btn btn-default" data-toggle="tooltips" data-placement="top" title="" data-original-title="Tooltip on top">Tooltip on top</button>
+        </p>
 
-    <p class="centered">
-        <button type="button" class="btn btn-default" data-toggle="tooltips" data-placement="right" title="" data-original-title="Tooltip on right">Tooltip on right</button>
-    </p>
+        <p class="centered">
+            <button type="button" class="btn btn-default" data-toggle="tooltips" data-placement="bottom" title="" data-original-title="Tooltip on bottom">Tooltip on bottom</button>
+        </p>
+
+        <p class="centered">
+            <button type="button" class="btn btn-default" data-toggle="tooltips" data-placement="right" title="" data-original-title="Tooltip on right">Tooltip on right</button>
+        </p>
+    </div>
 
 {% endblock tab_content %}
