Typo and reverting active lexicon tab

--- a/views/lexicon/index.html.twig
+++ b/views/lexicon/index.html.twig
@@ -144,8 +144,7 @@
         {
           "id"    : "tooltips_v2",
           "label" : "Tooltips v2",
-          "src"   : tooltips_v2,
-          "active": true
+          "src"   : tooltips_v2
         }
     ]
 %}
