Fix duplicate IDs in lexicon

--- a/views/lexicon/tabs/tooltips_v2.html.twig
+++ b/views/lexicon/tabs/tooltips_v2.html.twig
@@ -198,7 +198,7 @@
                     {
                         'class': 'form__control-col--1',
                         'label': 'Value',
-                        'id': 'value-0',
+                        'id': 'guid-' ~ random(),
                         'maxlength': '3',
                         'show-label': false,
                         'type': 'text',
@@ -207,7 +207,7 @@
                     {
                         'class': 'u-width-auto',
                         'label': 'Unit of time',
-                        'id': 'unit-0',
+                        'id': 'guid-' ~ random(),
                         'show-label': false,
                         'type': 'select',
                         'options': [
